Add some build files

--- a/main.bib
+++ b/main.bib
@@ -130,7 +130,7 @@
   publisher = {Almqvist \& Wiksells boktr.}
 }
 
-@book{box2015time,
+@book{box&jenkins,
   author    = {Box, George Edward Pelham and Jenkins, Gwilym M.},
   title     = {Time Series Analysis: Forecasting and Control},
   year      = {1994},
