--- a/main.bib
+++ b/main.bib
@@ -140,3 +140,12 @@
   edition   = {3rd},
   abstract  = {From the Publisher:This is a complete revision of a classic, seminal, and authoritative book that has been the model for most books on the topic written since 1970. It focuses on practical techniques throughout, rather than a rigorous mathematical treatment of the subject. It explores the building of stochastic (statistical) models for time series and their use in important areas of application —forecasting, model specification, estimation, and checking, transfer function modeling of dynamic relationships, modeling the effects of intervention events, and process control. Features sections on: recently developed methods for model specification, such as canonical correlation analysis and the use of model selection criteria; results on testing for unit root nonstationarity in ARIMA processes; the state space representation of ARMA models and its use for likelihood estimation and forecasting; score test for model checking; and deterministic components and structural components in time series models and their estimation based on regression-time series model methods.}
 }
+
+@book{akaike,
+  author    = {Brockwell, Peter J and Davis, Richard A},
+  title     = {Time Series: Theory and Methods},
+  year      = {1986},
+  isbn      = {0387964061},
+  publisher = {Springer-Verlag},
+  address   = {Berlin, Heidelberg}
+}
