Add bibtex wisardpkg

--- a/main.bib
+++ b/main.bib
@@ -149,3 +149,12 @@
   publisher = {Springer-Verlag},
   address   = {Berlin, Heidelberg}
 }
+
+@misc{wisardpkg,
+  title         = {wisardpkg -- A library for WiSARD-based models},
+  author        = {Aluizio S. Lima Filho and Gabriel P. Guarisa and Leopoldo A. D. Lusquino Filho and Luiz F. R. Oliveira and Felipe M. G. Franca and Priscila M. V. Lima},
+  year          = {2020},
+  eprint        = {2005.00887},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
