--- a/main.bib
+++ b/main.bib
@@ -158,3 +158,10 @@
   archiveprefix = {arXiv},
   primaryclass  = {cs.LG}
 }
+
+@inproceedings{seabold2010statsmodels,
+  title={statsmodels: Econometric and statistical modeling with python},
+  author={Seabold, Skipper and Perktold, Josef},
+  booktitle={9th Python in Science Conference},
+  year={2010},
+}
