--- a/main.bib
+++ b/main.bib
@@ -21,6 +21,7 @@
   title  = {A brief introduction to Weightless Neural Systems}
 }
 
+
 @inproceedings{binenctec,
   author = {Kappaun, Andressa and Camargo, Karine and Rangel, Fabio and Faria, Fabricio and Lima, Priscila and Oliveira, Jonice},
   year   = {2016},
@@ -160,8 +161,36 @@
 }
 
 @inproceedings{seabold2010statsmodels,
-  title={statsmodels: Econometric and statistical modeling with python},
-  author={Seabold, Skipper and Perktold, Josef},
-  booktitle={9th Python in Science Conference},
-  year={2010},
+  title     = {statsmodels: Econometric and statistical modeling with python},
+  author    = {Seabold, Skipper and Perktold, Josef},
+  booktitle = {9th Python in Science Conference},
+  year      = {2010}
+}
+
+@article{RIBEIRO2020109853,
+  title    = {Short-term forecasting COVID-19 cumulative confirmed cases: Perspectives for Brazil},
+  journal  = {Chaos, Solitons \& Fractals},
+  volume   = {135},
+  pages    = {109853},
+  year     = {2020},
+  issn     = {0960-0779},
+  doi      = {https://doi.org/10.1016/j.chaos.2020.109853},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0960077920302538},
+  author   = {Matheus Henrique Dal Molin Ribeiro and Ramon Gomes {da Silva} and Viviana Cocco Mariani and Leandro dos Santos Coelho},
+  keywords = {ARIMA, COVID-19, Forecasting, Decision-making, Machine learning, Time-series},
+  abstract = {The new Coronavirus (COVID-19) is an emerging disease responsible for infecting millions of people since the first notification until nowadays. Developing efficient short-term forecasting models allow forecasting the number of future cases. In this context, it is possible to develop strategic planning in the public health system to avoid deaths. In this paper, autoregressive integrated moving average (ARIMA), cubist regression (CUBIST), random forest (RF), ridge regression (RIDGE), support vector regression (SVR), and stacking-ensemble learning are evaluated in the task of time series forecasting with one, three, and six-days ahead the COVID-19 cumulative confirmed cases in ten Brazilian states with a high daily incidence. In the stacking-ensemble learning approach, the CUBIST regression, RF, RIDGE, and SVR models are adopted as base-learners and Gaussian process (GP) as meta-learner. The models’ effectiveness is evaluated based on the improvement index, mean absolute error, and symmetric mean absolute percentage error criteria. In most of the cases, the SVR and stacking-ensemble learning reach a better performance regarding adopted criteria than compared models. In general, the developed models can generate accurate forecasting, achieving errors in a range of 0.87%–3.51%, 1.02%–5.63%, and 0.95%–6.90% in one, three, and six-days-ahead, respectively. The ranking of models, from the best to the worst regarding accuracy, in all scenarios is SVR, stacking-ensemble learning, ARIMA, CUBIST, RIDGE, and RF models. The use of evaluated models is recommended to forecasting and monitor the ongoing growth of COVID-19 cases, once these models can assist the managers in the decision-making support systems.}
+}
+
+@article{WANG2020110058,
+  title    = {Prediction of epidemic trends in COVID-19 with logistic model and machine learning technics},
+  journal  = {Chaos, Solitons \& Fractals},
+  volume   = {139},
+  pages    = {110058},
+  year     = {2020},
+  issn     = {0960-0779},
+  doi      = {https://doi.org/10.1016/j.chaos.2020.110058},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0960077920304550},
+  author   = {Peipei Wang and Xinqi Zheng and Jiayang Li and Bangren Zhu},
+  keywords = {Coronavirus, COVID-19, Epidemic, Logistic, FbProphet, Modeling, Forecasting},
+  abstract = {COVID-19 has now had a huge impact in the world, and more than 8 million people in more than 100 countries are infected. To contain its spread, a number of countries published control measures. However, it’s not known when the epidemic will end in global and various countries. Predicting the trend of COVID-19 is an extremely important challenge. We integrate the most updated COVID-19 epidemiological data before June 16, 2020 into the Logistic model to fit the cap of epidemic trend, and then feed the cap value into FbProphet model, a machine learning based time series prediction model to derive the epidemic curve and predict the trend of the epidemic. Three significant points are summarized from our modeling results for global, Brazil, Russia, India, Peru and Indonesia. Under mathematical estimation, the global outbreak will peak in late October, with an estimated 14.12 million people infected cumulatively.}
 }
