--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{soul}% for underlines
 \usepackage[table, xcdraw]{xcolor} % for cell colors
 \usepackage{changepage,threeparttable} % for wide tables
+\usepackage{placeins}
 
 \makelosymbols
 \makeloabbreviations
