--- a/main.bib
+++ b/main.bib
@@ -202,3 +202,18 @@
   year         = 2020,
   author       = {Soner Yıldırım}
 }
+
+@article{HYNDMAN2006679,
+title = {Another look at measures of forecast accuracy},
+journal = {International Journal of Forecasting},
+volume = {22},
+number = {4},
+pages = {679-688},
+year = {2006},
+issn = {0169-2070},
+doi = {https://doi.org/10.1016/j.ijforecast.2006.03.001},
+url = {https://www.sciencedirect.com/science/article/pii/S0169207006000239},
+author = {Rob J. Hyndman and Anne B. Koehler},
+keywords = {Forecast accuracy, Forecast evaluation, Forecast error measures, M-competition, Mean absolute scaled error},
+abstract = {We discuss and compare measures of accuracy of univariate time series forecasts. The methods used in the M-competition as well as the M3-competition, and many of the measures recommended by previous authors on this topic, are found to be degenerate in commonly occurring situations. Instead, we propose that the mean absolute scaled error become the standard measure for comparing forecast accuracy across multiple time series.}
+}
