finish chap05: sec5.3

--- a/main.bib
+++ b/main.bib
@@ -217,3 +217,31 @@ author = {Rob J. Hyndman and Anne B. Koehler},
 keywords = {Forecast accuracy, Forecast evaluation, Forecast error measures, M-competition, Mean absolute scaled error},
 abstract = {We discuss and compare measures of accuracy of univariate time series forecasts. The methods used in the M-competition as well as the M3-competition, and many of the measures recommended by previous authors on this topic, are found to be degenerate in commonly occurring situations. Instead, we propose that the mean absolute scaled error become the standard measure for comparing forecast accuracy across multiple time series.}
 }
+
+@article{CHRISTOFALLIS2015,
+   title={A better measure of relative prediction accuracy for model selection and model estimation},
+   volume={66},
+   ISSN={1476-9360},
+   url={http://dx.doi.org/10.1057/jors.2014.103},
+   DOI={10.1057/jors.2014.103},
+   number={8},
+   journal={Journal of the Operational Research Society},
+   publisher={Informa UK Limited},
+   author={Tofallis, Chris},
+   year={2015},
+   month={Aug},
+   pages={1352–1362}
+}
+
+@article{MAKRIDAKIS1993527,
+title = {Accuracy measures: theoretical and practical concerns},
+journal = {International Journal of Forecasting},
+volume = {9},
+number = {4},
+pages = {527-529},
+year = {1993},
+issn = {0169-2070},
+doi = {https://doi.org/10.1016/0169-2070(93)90079-3},
+url = {https://www.sciencedirect.com/science/article/pii/0169207093900793},
+author = {Spyros Makridakis}
+}
