--- a/appenA.tex
+++ b/appenA.tex
@@ -4,25 +4,25 @@
 \begin{figure}[!htp]
     \centering
     \includegraphics[width=5.0in]{img/covid_mae_comparison.pdf}
-    \caption{MAE por modelo para o número de casos confirmados de Covid-19.}
+    \caption{MAE por modelo para o número de casos confirmados de COVID-19.}
 \end{figure}
 
 \begin{figure}[!htp]
     \centering
     \includegraphics[width=5.0in]{img/covid_mape_comparison.pdf}
-    \caption{MAPE por modelo para o número de casos confirmados de Covid-19.}
+    \caption{MAPE por modelo para o número de casos confirmados de COVID-19.}
 \end{figure}
 
 \begin{figure}[!htp]
     \centering
     \includegraphics[width=5.0in]{img/covid_mpe_comparison.pdf}
-    \caption{MPE por modelo para o número de casos confirmados de Covid-19.}
+    \caption{MPE por modelo para o número de casos confirmados de COVID-19.}
 \end{figure}
 
 \begin{figure}[!htp]
     \centering
     \includegraphics[width=5.0in]{img/covid_rmse_comparison.pdf}
-    \caption{RMSE por modelo para o número de casos confirmados de Covid-19.}
+    \caption{RMSE por modelo para o número de casos confirmados de COVID-19.}
 \end{figure}
 
 \begin{figure}[!htp]
