--- a/appenA.tex
+++ b/appenA.tex
@@ -1,4 +1,4 @@
-\chapter{Comparação das métricas por modelo e \textit{dataset}}
+\chapter{Comparação das métricas por modelo e coleção de dados}
 \label{apen:a}
 
 \begin{figure}[!htp]
