--- a/frontmatter/resumo.tex
+++ b/frontmatter/resumo.tex
@@ -1,6 +1,6 @@
 
 \begin{abstract}
 
-Previsão de séries temporais é um problema presente em diversos cenários da realidade e, com o início da pandemia de COVID-19, ficou ainda mais evidente a necessidade de extrapolação dos dados para auxiliar nas tomadas de decisão em ações preventivas. Nesse contexto, este trabalho apresenta uma solução agnóstica para o problema de previsão de séries temporais utilizando como modelo de aprendizado de máquina a rede neural sem peso Regression WiSARD, além de empregar técnicas de pré-processamento para transformar a tarefa de previsão de série temporal em um problema supervisionado de regressão. A abordagem proposta se mostrou competitiva em relação à acurácia quando comparada com modelos de destaque na literatura, como Prophet e ARIMA, e obteve melhor desempenho em relação ao tempo de execução e consumo de memória, que podem ser fatores determinantes em cenários de baixa disponibilidade de recursos.
+Previsão de séries temporais é um problema presente em diversos cenários do mundo real e, com o início da pandemia de COVID-19, ficou ainda mais evidente a necessidade de extrapolação dos dados para auxiliar nas tomadas de decisão em ações preventivas. Nesse contexto, este trabalho apresenta uma solução agnóstica para o problema de previsão de séries temporais utilizando como modelo de aprendizado de máquina a rede neural sem peso Regression WiSARD, além de empregar técnicas de pré-processamento para transformar a tarefa de previsão de série temporal em um problema supervisionado de regressão. A abordagem proposta se mostrou competitiva em relação à acurácia quando comparada com modelos de destaque na literatura, como Prophet e ARIMA, e obteve melhor desempenho em relação ao tempo de execução e consumo de memória, que podem ser fatores determinantes em cenários de baixa disponibilidade de recursos.
 
 \end{abstract}
