--- a/main.bib
+++ b/main.bib
@@ -21,6 +21,14 @@
   title  = {A brief introduction to Weightless Neural Systems}
 }
 
+@article{Aleksander1984WISARDaRS,
+  title={WISARD·a radical step forward in image recognition},
+  author={Igor Aleksander and W. V. Thomas and Pr Bowden},
+  journal={Sensor Review},
+  year={1984},
+  volume={4},
+  pages={120-124}
+}
 
 @inproceedings{binenctec,
   author = {Kappaun, Andressa and Camargo, Karine and Rangel, Fabio and Faria, Fabricio and Lima, Priscila and Oliveira, Jonice},
