--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{hyperref}
 \usepackage{multirow}
 \usepackage{booktabs, multirow} % for borders and merged ranges
+\usepackage{glossaries}
 \usepackage{soul}% for underlines
 \usepackage[table, xcdraw]{xcolor} % for cell colors
 \usepackage{changepage,threeparttable} % for wide tables
@@ -38,7 +39,6 @@
 
 \maketitle
 
-\frontmatter
 \include{frontmatter/dedic}
 \include{frontmatter/thanks}
 \include{frontmatter/resumo}
