--- a/appenA.tex
+++ b/appenA.tex
@@ -1,6 +1,8 @@
 \chapter{Comparação das métricas por modelo e coleção de dados}
 \label{apen:a}
 
+Para a comparação das métricas de acurácia entre os modelos utilizados nos experimentos, foram utilizados gráficos de barras. O eixo das ordenadas é composto pela métrica de acurácia utilizada na comparação, enquanto o eixo das abscissas contém o identificador das barras, que são os modelos. Para manter a coerência, o modelo ARIMA foi sempre representado pela cor preta, enquanto o Prophet pela cor vermelha e a ReW pela azul.
+
 \begin{figure}[!htp]
     \centering
     \includegraphics[width=5.0in]{img/covid_mae_comparison.pdf}
