--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,5 +1,5 @@
 \begin{foreignabstract}
 
-In this work, we present ...
+Time series forecasting is a problem present in many real-world scenarios and, with the beginning of the COVID-19 pandemic, became even more evident the need for data extrapolation to help decision-making in preventive actions. In this context, this work presents an agnostic solution for time series forecasting using as machine learning algorithm the Weightless Neural Network Regression WiSARD, as well as techniques of pre-processing to transform the task of time series forecasting into a supervised regression problem. The proposed approach was competitive in terms of accuracy when compared with models of high-profile in the literature such as Prophet and ARIMA, and obtained better performance in terms of execution time and memory consumption, which can be determinant factors in low resource availability scenarios.
 
 \end{foreignabstract}
