add tackling climate change with machine learning reference

--- a/main.bib
+++ b/main.bib
@@ -253,3 +253,38 @@ doi = {https://doi.org/10.1016/0169-2070(93)90079-3},
 url = {https://www.sciencedirect.com/science/article/pii/0169207093900793},
 author = {Spyros Makridakis}
 }
+
+@article{DBLP:journals/corr/abs-1906-05433,
+  author    = {David Rolnick and
+               Priya L. Donti and
+               Lynn H. Kaack and
+               Kelly Kochanski and
+               Alexandre Lacoste and
+               Kris Sankaran and
+               Andrew Slavin Ross and
+               Nikola Milojevic{-}Dupont and
+               Natasha Jaques and
+               Anna Waldman{-}Brown and
+               Alexandra Luccioni and
+               Tegan Maharaj and
+               Evan D. Sherwin and
+               S. Karthik Mukkavilli and
+               Konrad P. K{\"{o}}rding and
+               Carla P. Gomes and
+               Andrew Y. Ng and
+               Demis Hassabis and
+               John C. Platt and
+               Felix Creutzig and
+               Jennifer T. Chayes and
+               Yoshua Bengio},
+  title     = {Tackling Climate Change with Machine Learning},
+  journal   = {CoRR},
+  volume    = {abs/1906.05433},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1906.05433},
+  eprinttype = {arXiv},
+  eprint    = {1906.05433},
+  timestamp = {Wed, 09 Jun 2021 17:18:44 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1906-05433.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
