replace metricas de acuracia with metricas de erro

--- a/appenA.tex
+++ b/appenA.tex
@@ -1,7 +1,7 @@
 \chapter{Comparação das métricas por modelo e conjunto de dados}
 \label{apen:a}
 
-Para a comparação das métricas de acurácia entre os modelos utilizados nos experimentos, foram utilizados gráficos de barras. O eixo das ordenadas é composto pela métrica de acurácia utilizada na comparação, enquanto o eixo das abscissas contém o identificador das barras, que são os modelos. Para manter a coerência, o modelo ARIMA foi sempre representado pela cor preta, enquanto o Prophet pela cor vermelha e a ReW pela azul.
+Para a comparação das métricas de erro entre os modelos utilizados nos experimentos, foram utilizados gráficos de barras. O eixo das ordenadas é composto pela métrica de erro utilizada na comparação, enquanto o eixo das abscissas contém o identificador das barras, que são os modelos. Para manter a coerência, o modelo ARIMA foi sempre representado pela cor preta, enquanto o Prophet pela cor vermelha e a ReW pela azul.
 
 \begin{figure}[!htp]
     \centering
