--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 \makeatother
 
 \begin{document}
-\title{Título}
-\foreigntitle{Title}
+\title{Previsão de Séries Temporais com Redes Neurais sem Peso}
+\foreigntitle{Time Series Forecasting with Weightless Neural Networks}
 \author{João Victor}{Almeida Davim}
 \advisor{Prof.}{Priscila}{Machado Vieira Lima}{Ph.D.}
 \advisor{Prof.}{Leopoldo André}{Dutra Lusquino Filho}{D.Sc.}
@@ -28,8 +28,6 @@
 \examiner{Prof.}{Nome do Primeiro Examinador Sobrenome}{D.Sc.}
 \examiner{Prof.}{Nome do Segundo Examinador Sobrenome}{Ph.D.}
 \examiner{Prof.}{Nome do Terceiro Examinador Sobrenome}{D.Sc.}
-\examiner{Prof.}{Nome do Quarto  Examinador Sobrenome}{Ph.D.}
-\examiner{Prof.}{Nome do Quinto Examinador Sobrenome}{Ph.D.}
 \department{PESC}
 \date{08}{2021}
 
