add frontpage, dedic and thanks

--- a/frontmatter/dedic.tex
+++ b/frontmatter/dedic.tex
@@ -1,1 +1,1 @@
-\dedication{A algu\'em cujo valor \'e digno desta dedicat\'oria.}
+\dedication{Dedico este trabalho a minha irmã, Carolina, que est\'a começando sua jornada no curso de Direito.}
