--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,3 +1,2 @@
 \chapter*{Agradecimentos}
-
-Gostaria de agradecer a todos.
+Agradeço primeiramente aos meus pais por proporcionarem muitas oportunidades de estudo e me apioarem em todas as etapas da minha vida. Agradeço meus orientadores pelo empenho, orientações e incentivo constantes. Agradeço minha esposa por me incentivar e me manter tranquilo.
