--- a/main.tex
+++ b/main.tex
@@ -20,23 +20,26 @@
 \begin{document}
 \title{Previsão de Séries Temporais com Redes Neurais sem Peso}
 \foreigntitle{Time Series Forecasting with Weightless Neural Networks}
+
 \author{João Victor}{Almeida Davim}
+
 \advisor{Prof.}{Priscila}{Machado Vieira Lima}{Ph.D.}
 \advisor{Prof.}{Leopoldo André}{Dutra Lusquino Filho}{D.Sc.}
 
+\examiner{Prof.}{Felipe Maia Galvão França}{Ph.D.}
+\examiner{Prof.}{Heudson Tosta Mirandola}{D.Sc.}
 
-\examiner{Prof.}{Nome do Primeiro Examinador Sobrenome}{D.Sc.}
-\examiner{Prof.}{Nome do Segundo Examinador Sobrenome}{Ph.D.}
-\examiner{Prof.}{Nome do Terceiro Examinador Sobrenome}{D.Sc.}
 \department{PESC}
-\date{08}{2021}
+\date{12}{2022}
 
-\keyword{Primeira palavra-chave}
-\keyword{Segunda palavra-chave}
-\keyword{Terceira palavra-chave}
+\keyword{Aprendizado de máquina}
+\keyword{Redes neurais sem peso}
+\keyword{Séries temporais}
 
 \maketitle
 
+\frontmatter
+\include{frontmatter/disclaimer}
 \include{frontmatter/dedic}
 \include{frontmatter/thanks}
 \include{frontmatter/resumo}
