--- a/frontmatter/dedic.tex
+++ b/frontmatter/dedic.tex
@@ -1,1 +1,2 @@
-\dedication{Dedico este trabalho a minha irmã, Carolina, que est\'a começando sua jornada no curso de Direito.}
+\chapter*{Dedicatória}
+Dedico este trabalho a minha irmã, Carolina, que est\'a começando sua jornada no curso de Direito.
