add explanation about fast training of rew

--- a/main.bib
+++ b/main.bib
@@ -22,12 +22,12 @@
 }
 
 @article{Aleksander1984WISARDaRS,
-  title={WISARD·a radical step forward in image recognition},
-  author={Igor Aleksander and W. V. Thomas and Pr Bowden},
-  journal={Sensor Review},
-  year={1984},
-  volume={4},
-  pages={120-124}
+  title   = {WISARD·a radical step forward in image recognition},
+  author  = {Igor Aleksander and W. V. Thomas and Pr Bowden},
+  journal = {Sensor Review},
+  year    = {1984},
+  volume  = {4},
+  pages   = {120-124}
 }
 
 @inproceedings{binenctec,
@@ -212,79 +212,94 @@
 }
 
 @article{HYNDMAN2006679,
-title = {Another look at measures of forecast accuracy},
-journal = {International Journal of Forecasting},
-volume = {22},
-number = {4},
-pages = {679-688},
-year = {2006},
-issn = {0169-2070},
-doi = {https://doi.org/10.1016/j.ijforecast.2006.03.001},
-url = {https://www.sciencedirect.com/science/article/pii/S0169207006000239},
-author = {Rob J. Hyndman and Anne B. Koehler},
-keywords = {Forecast accuracy, Forecast evaluation, Forecast error measures, M-competition, Mean absolute scaled error},
-abstract = {We discuss and compare measures of accuracy of univariate time series forecasts. The methods used in the M-competition as well as the M3-competition, and many of the measures recommended by previous authors on this topic, are found to be degenerate in commonly occurring situations. Instead, we propose that the mean absolute scaled error become the standard measure for comparing forecast accuracy across multiple time series.}
+  title    = {Another look at measures of forecast accuracy},
+  journal  = {International Journal of Forecasting},
+  volume   = {22},
+  number   = {4},
+  pages    = {679-688},
+  year     = {2006},
+  issn     = {0169-2070},
+  doi      = {https://doi.org/10.1016/j.ijforecast.2006.03.001},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0169207006000239},
+  author   = {Rob J. Hyndman and Anne B. Koehler},
+  keywords = {Forecast accuracy, Forecast evaluation, Forecast error measures, M-competition, Mean absolute scaled error},
+  abstract = {We discuss and compare measures of accuracy of univariate time series forecasts. The methods used in the M-competition as well as the M3-competition, and many of the measures recommended by previous authors on this topic, are found to be degenerate in commonly occurring situations. Instead, we propose that the mean absolute scaled error become the standard measure for comparing forecast accuracy across multiple time series.}
 }
 
 @article{CHRISTOFALLIS2015,
-   title={A better measure of relative prediction accuracy for model selection and model estimation},
-   volume={66},
-   ISSN={1476-9360},
-   url={http://dx.doi.org/10.1057/jors.2014.103},
-   DOI={10.1057/jors.2014.103},
-   number={8},
-   journal={Journal of the Operational Research Society},
-   publisher={Informa UK Limited},
-   author={Tofallis, Chris},
-   year={2015},
-   month={Aug},
-   pages={1352–1362}
+  title     = {A better measure of relative prediction accuracy for model selection and model estimation},
+  volume    = {66},
+  issn      = {1476-9360},
+  url       = {http://dx.doi.org/10.1057/jors.2014.103},
+  doi       = {10.1057/jors.2014.103},
+  number    = {8},
+  journal   = {Journal of the Operational Research Society},
+  publisher = {Informa UK Limited},
+  author    = {Tofallis, Chris},
+  year      = {2015},
+  month     = {Aug},
+  pages     = {1352–1362}
 }
 
 @article{MAKRIDAKIS1993527,
-title = {Accuracy measures: theoretical and practical concerns},
-journal = {International Journal of Forecasting},
-volume = {9},
-number = {4},
-pages = {527-529},
-year = {1993},
-issn = {0169-2070},
-doi = {https://doi.org/10.1016/0169-2070(93)90079-3},
-url = {https://www.sciencedirect.com/science/article/pii/0169207093900793},
-author = {Spyros Makridakis}
+  title   = {Accuracy measures: theoretical and practical concerns},
+  journal = {International Journal of Forecasting},
+  volume  = {9},
+  number  = {4},
+  pages   = {527-529},
+  year    = {1993},
+  issn    = {0169-2070},
+  doi     = {https://doi.org/10.1016/0169-2070(93)90079-3},
+  url     = {https://www.sciencedirect.com/science/article/pii/0169207093900793},
+  author  = {Spyros Makridakis}
 }
 
 @article{DBLP:journals/corr/abs-1906-05433,
-  author    = {David Rolnick and
-               Priya L. Donti and
-               Lynn H. Kaack and
-               Kelly Kochanski and
-               Alexandre Lacoste and
-               Kris Sankaran and
-               Andrew Slavin Ross and
-               Nikola Milojevic{-}Dupont and
-               Natasha Jaques and
-               Anna Waldman{-}Brown and
-               Alexandra Luccioni and
-               Tegan Maharaj and
-               Evan D. Sherwin and
-               S. Karthik Mukkavilli and
-               Konrad P. K{\"{o}}rding and
-               Carla P. Gomes and
-               Andrew Y. Ng and
-               Demis Hassabis and
-               John C. Platt and
-               Felix Creutzig and
-               Jennifer T. Chayes and
-               Yoshua Bengio},
-  title     = {Tackling Climate Change with Machine Learning},
-  journal   = {CoRR},
-  volume    = {abs/1906.05433},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1906.05433},
+  author     = {David Rolnick and
+                Priya L. Donti and
+                Lynn H. Kaack and
+                Kelly Kochanski and
+                Alexandre Lacoste and
+                Kris Sankaran and
+                Andrew Slavin Ross and
+                Nikola Milojevic{-}Dupont and
+                Natasha Jaques and
+                Anna Waldman{-}Brown and
+                Alexandra Luccioni and
+                Tegan Maharaj and
+                Evan D. Sherwin and
+                S. Karthik Mukkavilli and
+                Konrad P. K{\"{o}}rding and
+                Carla P. Gomes and
+                Andrew Y. Ng and
+                Demis Hassabis and
+                John C. Platt and
+                Felix Creutzig and
+                Jennifer T. Chayes and
+                Yoshua Bengio},
+  title      = {Tackling Climate Change with Machine Learning},
+  journal    = {CoRR},
+  volume     = {abs/1906.05433},
+  year       = {2019},
+  url        = {http://arxiv.org/abs/1906.05433},
   eprinttype = {arXiv},
-  eprint    = {1906.05433},
-  timestamp = {Wed, 09 Jun 2021 17:18:44 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1906-05433.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  eprint     = {1906.05433},
+  timestamp  = {Wed, 09 Jun 2021 17:18:44 +0200},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-1906-05433.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{KOLCZ1996855,
+  title    = {N-tuple Regression Network},
+  journal  = {Neural Networks},
+  volume   = {9},
+  number   = {5},
+  pages    = {855-869},
+  year     = {1996},
+  issn     = {0893-6080},
+  doi      = {https://doi.org/10.1016/0893-6080(95)00116-6},
+  url      = {https://www.sciencedirect.com/science/article/pii/0893608095001166},
+  author   = {Aleksander Kolcz and Nigel M. Allinson},
+  keywords = {Non-parametric estimation, Regression equation, -tuple sampling, RAM-based neural networks, Local receptive fields, Basis functions},
+  abstract = {N-tuple neural networks (NTNNs) have been successfully applied to both pattern recognition and function approximation tasks. Their main advantages include a single layer structure, capability of realizing highly non-linear mappings and simplicity of operation. In this work a modification of the basic network architecture is presented, which allows it to operate as a non-parametric kernel regression estimator. This type of network is inherently capable of approximating complex probability density functions (pdfs) and, in the limiting sense, deterministic arbitrary function mappings. At the same time, the regression network features a powerful one-pass training procedure and its learning is statistically consistent. The major advantage of utilizing the N-tuple architecture as a regression estimator is the fact that in this realization the training set points are stored by the network implicitly, rather than explicitly, and thus the operation speed remains constant and independent of the training set size. Therefore, the network performance can be guaranteed in practical implementations. Copyright © 1996 Elsevier Science Ltd}
 }
